// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c7 {
  min-width: 0;
}

.c12 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c16 {
  padding-right: 56px;
  padding-left: 56px;
}

.c18 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c33 {
  background: #ffffff;
  padding-right: 12px;
  padding-left: 12px;
  border-radius: 4px;
  position: relative;
  overflow: hidden;
  width: 100%;
  cursor: default;
}

.c36 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c43 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c46 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c49 {
  background: #ffffff;
  padding: 16px;
}

.c67 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c50 {
  border-radius: 4px;
}

.c52 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c54 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c55 {
  background: transparent;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c60 {
  background: #dcdce4;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c62 {
  color: #666687;
  width: 0.6875rem;
}

.c65 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c10 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c15 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c20 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c24 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c26 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c38 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c42 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c48 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c58 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c59 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c17 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c23 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c34 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c37 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 12px;
}

.c47 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c61 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c51 {
  border: 1px solid #f6f6f9;
}

.c51:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c51:hover:not([aria-disabled='true']) .c9 {
  color: #4945ff;
}

.c51:hover:not([aria-disabled='true']) > .c5 {
  background: #f0f0ff;
}

.c51:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c64 {
  border: 1px solid #ffffff;
}

.c64:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c64:hover:not([aria-disabled='true']) .c9 {
  color: #4945ff;
}

.c64:hover:not([aria-disabled='true']) > .c5 {
  background: #f0f0ff;
}

.c64:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c56 {
  border: none;
  position: relative;
  outline: none;
}

.c56[aria-disabled='true'] {
  pointer-events: none;
}

.c56[aria-disabled='true'] svg path {
  fill: #666687;
}

.c56 svg path {
  fill: #4945ff;
}

.c56:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c56:focus-visible {
  outline: none;
}

.c56:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c63 path {
  fill: #666687;
}

.c57 {
  text-align: left;
}

.c57 > span {
  max-width: 100%;
}

.c57 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c57 svg path {
  fill: #8e8ea9;
}

.c53 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c53:hover svg path {
  fill: #4945ff;
}

.c13 {
  position: relative;
  outline: none;
}

.c13 > svg {
  height: 12px;
  width: 12px;
}

.c13 > svg > g,
.c13 > svg path {
  fill: #ffffff;
}

.c13[aria-disabled='true'] {
  pointer-events: none;
}

.c13:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c13:focus-visible {
  outline: none;
}

.c13:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c68 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c14 {
  height: 2rem;
}

.c14[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true'] .c9 {
  color: #666687;
}

.c14[aria-disabled='true'] svg > g,.c14[aria-disabled='true'] svg path {
  fill: #666687;
}

.c14[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c14[aria-disabled='true']:active svg > g,.c14[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c14:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c14:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c27 {
  line-height: 0;
}

.c29 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c29::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29[aria-disabled='true'] {
  color: inherit;
}

.c29:focus {
  outline: none;
  box-shadow: none;
}

.c28 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c28:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c35 {
  border: 1px solid #dcdce4;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c35[aria-disabled='true'] {
  color: #666687;
}

.c35:focus-visible {
  outline: none;
}

.c35:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c41 > svg {
  width: 0.375rem;
}

.c41 > svg > path {
  fill: #666687;
}

.c39 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c69[data-state='checked'] .c9 {
  font-weight: bold;
  color: #4945ff;
}

.c21 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c44 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c22 {
  grid-column: span 6;
  max-width: 100%;
}

.c45 {
  grid-column: span 7;
  max-width: 100%;
}

.c66 {
  grid-column: span 5;
  max-width: 100%;
}

.c0:focus-visible {
  outline: none;
}

.c31 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c31:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c32 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c32::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c32::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c32:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c32::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c32:focus-within {
  outline: none;
}

.c30 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c30 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c30 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c30 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c30 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c4 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 8px;
  position: relative;
  outline: none;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3 svg path {
  fill: #4945ff;
}

.c3:hover {
  color: #7b79ff;
}

.c3:active {
  color: #271fe0;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

@media (max-width:68.75rem) {
  .c22 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c22 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c45 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c45 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c66 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c66 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                  fill="#212134"
                />
              </svg>
              <span
                class="c4"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c5 c6"
          >
            <div
              class="c5 c7 c8"
            >
              <h1
                class="c9 c10"
              >
                Create API Token
              </h1>
            </div>
            <div
              class="c5 c11"
            >
              <button
                aria-disabled="false"
                class="c5 c12 c11 c13 c14"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c9 c15"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c16"
      >
        <div
          class="c5 c17"
        >
          <div
            class="c18"
          >
            <div
              class="c5 c19"
            >
              <h2
                class="c9 c20"
              >
                Details
              </h2>
              <div
                class="c21"
              >
                <div
                  class="c22"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class=""
                      >
                        <div
                          class="c5 c23"
                        >
                          <label
                            class="c9 c24 c25"
                            for="1"
                          >
                            Name
                            <span
                              class="c9 c26 c27"
                            >
                              *
                            </span>
                          </label>
                          <div
                            class="c5 c6 c28"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c29"
                              id="1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c22"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c30"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c5 c23"
                        >
                          <div
                            class="c5 c8"
                          >
                            <label
                              class="c9 c24 c25"
                              for="3"
                            >
                              Description
                            </label>
                          </div>
                          <div
                            class="c31"
                          >
                            <textarea
                              aria-invalid="false"
                              aria-required="false"
                              class="c32"
                              id="3"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c22"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c5 c23"
                      >
                        <label
                          class="c9 c24 c25"
                          for="5"
                        >
                          Token duration
                          <span
                            class="c9 c26 c27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          aria-autocomplete="none"
                          aria-controls="radix-0"
                          aria-describedby="5-hint 5-error"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-label="Token duration"
                          aria-required="true"
                          class="c5 c33 c34 c35"
                          data-state="closed"
                          dir="ltr"
                          id="5"
                          overflow="hidden"
                          role="combobox"
                          tabindex="0"
                        >
                          <span
                            class="c5 c36 c37"
                          >
                            <span
                              class="c9 c38 c39"
                            >
                              <span
                                class="c40"
                              >
                                <span>
                                  Select
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="c5 c37"
                          >
                            <span
                              aria-hidden="true"
                              class="c41"
                            >
                              <svg
                                fill="none"
                                height="1rem"
                                viewBox="0 0 14 8"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c9 c42"
                    />
                  </div>
                </div>
                <div
                  class="c22"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c5 c23"
                      >
                        <label
                          class="c9 c24 c25"
                          for="7"
                        >
                          Token type
                          <span
                            class="c9 c26 c27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          aria-autocomplete="none"
                          aria-controls="radix-1"
                          aria-describedby="7-hint 7-error"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-label="Token type"
                          aria-required="true"
                          class="c5 c33 c34 c35"
                          data-state="closed"
                          dir="ltr"
                          id="7"
                          overflow="hidden"
                          role="combobox"
                          tabindex="0"
                        >
                          <span
                            class="c5 c36 c37"
                          >
                            <span
                              class="c9 c38 c39"
                            >
                              <span
                                class="c40"
                              >
                                <span>
                                  Select
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="c5 c37"
                          >
                            <span
                              aria-hidden="true"
                              class="c41"
                            >
                              <svg
                                fill="none"
                                height="1rem"
                                viewBox="0 0 14 8"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c43 c44"
          >
            <div
              class="c45"
            >
              <div
                class="c46"
              >
                <div
                  class="c5 c47"
                >
                  <h2
                    class="c9 c20"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c9 c48"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c49"
                >
                  <div
                    aria-disabled="false"
                    class="c50 c51"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c5 c52 c6 c53"
                    >
                      <div
                        class="c5 c54 c37"
                      >
                        <button
                          aria-controls="accordion-content-10"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-10"
                          class="c5 c55 c11 c56 c57"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c9 c58"
                          >
                            <span
                              class="c9 c59"
                              id="accordion-label-10"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c5 c37"
                        >
                          <span
                            aria-hidden="true"
                            class="c5 c60 c61"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c62 c63"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c50 c64"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c5 c65 c6 c53"
                    >
                      <div
                        class="c5 c54 c37"
                      >
                        <button
                          aria-controls="accordion-content-11"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-11"
                          class="c5 c55 c11 c56 c57"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c9 c58"
                          >
                            <span
                              class="c9 c59"
                              id="accordion-label-11"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c5 c37"
                        >
                          <span
                            aria-hidden="true"
                            class="c5 c60 c61"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c62 c63"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c66"
            >
              <div
                class="c67"
                style="min-height: 100%;"
              >
                <div
                  class="c5 c47"
                >
                  <h3
                    class="c9 c20"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c9 c48"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c68"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c7 {
  min-width: 0;
}

.c12 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c17 {
  padding-right: 56px;
  padding-left: 56px;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c19 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c20 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c26 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c40 {
  background: #eaeaef;
  padding-right: 12px;
  padding-left: 12px;
  border-radius: 4px;
  position: relative;
  overflow: hidden;
  width: 100%;
  cursor: default;
}

.c43 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c50 {
  background: #ffffff;
  padding-right: 12px;
  padding-left: 12px;
  border-radius: 4px;
  position: relative;
  overflow: hidden;
  width: 100%;
  cursor: default;
}

.c52 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c55 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c57 {
  background: #ffffff;
  padding: 16px;
}

.c75 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c58 {
  border-radius: 4px;
}

.c60 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c62 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c63 {
  background: transparent;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c68 {
  background: #dcdce4;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c70 {
  color: #666687;
  width: 0.6875rem;
}

.c73 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c10 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c15 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c23 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 500;
  color: #32324d;
}

.c25 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c28 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c31 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c33 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c45 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c49 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c51 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c66 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c67 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c18 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

.c22 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c27 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c41 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c44 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 12px;
}

.c56 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c69 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c59 {
  border: 1px solid #f6f6f9;
}

.c59:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c59:hover:not([aria-disabled='true']) .c9 {
  color: #4945ff;
}

.c59:hover:not([aria-disabled='true']) > .c5 {
  background: #f0f0ff;
}

.c59:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c72 {
  border: 1px solid #ffffff;
}

.c72:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c72:hover:not([aria-disabled='true']) .c9 {
  color: #4945ff;
}

.c72:hover:not([aria-disabled='true']) > .c5 {
  background: #f0f0ff;
}

.c72:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c64 {
  border: none;
  position: relative;
  outline: none;
}

.c64[aria-disabled='true'] {
  pointer-events: none;
}

.c64[aria-disabled='true'] svg path {
  fill: #666687;
}

.c64 svg path {
  fill: #4945ff;
}

.c64:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c64:focus-visible {
  outline: none;
}

.c64:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c71 path {
  fill: #666687;
}

.c65 {
  text-align: left;
}

.c65 > span {
  max-width: 100%;
}

.c65 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c65 svg path {
  fill: #8e8ea9;
}

.c61 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c61:hover svg path {
  fill: #4945ff;
}

.c13 {
  position: relative;
  outline: none;
}

.c13 > svg {
  height: 12px;
  width: 12px;
}

.c13 > svg > g,
.c13 > svg path {
  fill: #ffffff;
}

.c13[aria-disabled='true'] {
  pointer-events: none;
}

.c13:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c13:focus-visible {
  outline: none;
}

.c13:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c76 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c77[aria-disabled='true'] .c9 {
  color: #666687;
}

.c77[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c14 {
  height: 2rem;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c14[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true'] .c9 {
  color: #666687;
}

.c14[aria-disabled='true'] svg > g,.c14[aria-disabled='true'] svg path {
  fill: #666687;
}

.c14[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c14[aria-disabled='true']:active svg > g,.c14[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c14:hover {
  background-color: #f6f6f9;
}

.c14:active {
  background-color: #eaeaef;
}

.c14 .c9 {
  color: #32324d;
}

.c14 svg > g,
.c14 svg path {
  fill: #32324d;
}

.c16 {
  height: 2rem;
}

.c16[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c16[aria-disabled='true'] .c9 {
  color: #666687;
}

.c16[aria-disabled='true'] svg > g,.c16[aria-disabled='true'] svg path {
  fill: #666687;
}

.c16[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c16[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c16[aria-disabled='true']:active svg > g,.c16[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c16:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c16:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c16 svg > g,
.c16 svg path {
  fill: #ffffff;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 {
  line-height: 0;
}

.c36 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c36::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36[aria-disabled='true'] {
  color: inherit;
}

.c36:focus {
  outline: none;
  box-shadow: none;
}

.c35 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c35:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c42 {
  border: 1px solid #dcdce4;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c42[aria-disabled='true'] {
  color: #666687;
}

.c42:focus-visible {
  outline: none;
}

.c42:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c48 > svg {
  width: 0.375rem;
}

.c48 > svg > path {
  fill: #666687;
}

.c46 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c78[data-state='checked'] .c9 {
  font-weight: bold;
  color: #4945ff;
}

.c29 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c53 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c30 {
  grid-column: span 6;
  max-width: 100%;
}

.c54 {
  grid-column: span 7;
  max-width: 100%;
}

.c74 {
  grid-column: span 5;
  max-width: 100%;
}

.c0:focus-visible {
  outline: none;
}

.c38 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c38:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c39 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c39::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c39::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c39:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c39::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c39:focus-within {
  outline: none;
}

.c37 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c37 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c37 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c37 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c37 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c4 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 8px;
  position: relative;
  outline: none;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3 svg path {
  fill: #4945ff;
}

.c3:hover {
  color: #7b79ff;
}

.c3:active {
  color: #271fe0;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c21 {
  margin-right: 24px;
}

.c21 svg {
  width: 2rem;
  height: 2rem;
}

.c24 {
  word-break: break-all;
}

@media (max-width:68.75rem) {
  .c30 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c30 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c54 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c54 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c74 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c74 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                  fill="#212134"
                />
              </svg>
              <span
                class="c4"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c5 c6"
          >
            <div
              class="c5 c7 c8"
            >
              <h1
                class="c9 c10"
              >
                My super token
              </h1>
            </div>
            <div
              class="c5 c11"
            >
              <button
                aria-disabled="false"
                class="c5 c12 c11 c13 c14"
                name="regenerate"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.681 2.804A9.64 9.64 0 0 0 11.818 2C6.398 2 2 6.48 2 12c0 5.521 4.397 10 9.818 10 2.03 0 4.011-.641 5.67-1.835a9.987 9.987 0 0 0 3.589-4.831 1.117 1.117 0 0 0-.664-1.418 1.086 1.086 0 0 0-1.393.676 7.769 7.769 0 0 1-2.792 3.758 7.546 7.546 0 0 1-4.41 1.428V4.222h.002a7.492 7.492 0 0 1 3.003.625 7.61 7.61 0 0 1 2.5 1.762l.464.551-2.986 3.042a.186.186 0 0 0 .129.316H22V3.317a.188.188 0 0 0-.112-.172.179.179 0 0 0-.199.04l-2.355 2.4-.394-.468-.02-.02a9.791 9.791 0 0 0-3.239-2.293Zm-3.863 1.418V2v2.222Zm0 0v15.556c-4.216 0-7.636-3.484-7.636-7.778s3.42-7.777 7.636-7.778Z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <span
                  class="c9 c15"
                >
                  Regenerate
                </span>
              </button>
              <button
                aria-disabled="false"
                class="c5 c12 c11 c13 c16"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c9 c15"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c17"
      >
        <div
          class="c5 c18"
        >
          <div
            class="c5 c19 c8"
          >
            <div
              class="c5 c20 c8 c21"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 1 1 0-4H23v4h-2v4h-4v-4ZM7 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c5 c22"
            >
              <div
                class="c5 c8"
              >
                <span
                  class="c9 c23 c24"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c9 c25"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c26"
          >
            <div
              class="c5 c27"
            >
              <h2
                class="c9 c28"
              >
                Details
              </h2>
              <div
                class="c29"
              >
                <div
                  class="c30"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class=""
                      >
                        <div
                          class="c5 c22"
                        >
                          <label
                            class="c9 c31 c32"
                            for="14"
                          >
                            Name
                            <span
                              class="c9 c33 c34"
                            >
                              *
                            </span>
                          </label>
                          <div
                            class="c5 c6 c35"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c36"
                              id="14"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c30"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c37"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c5 c22"
                        >
                          <div
                            class="c5 c8"
                          >
                            <label
                              class="c9 c31 c32"
                              for="16"
                            >
                              Description
                            </label>
                          </div>
                          <div
                            class="c38"
                          >
                            <textarea
                              aria-invalid="false"
                              aria-required="false"
                              class="c39"
                              id="16"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c30"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c5 c22"
                      >
                        <label
                          class="c9 c31 c32"
                          for="18"
                        >
                          Token duration
                          <span
                            class="c9 c33 c34"
                          >
                            *
                          </span>
                        </label>
                        <div
                          aria-autocomplete="none"
                          aria-controls="radix-9"
                          aria-describedby="18-hint 18-error"
                          aria-disabled="true"
                          aria-expanded="false"
                          aria-label="Token duration"
                          aria-required="true"
                          class="c5 c40 c41 c42"
                          data-disabled=""
                          data-state="closed"
                          dir="ltr"
                          id="18"
                          overflow="hidden"
                          role="combobox"
                        >
                          <span
                            class="c5 c43 c44"
                          >
                            <span
                              class="c9 c45 c46"
                            >
                              <span
                                class="c47"
                              >
                                <span>
                                  Select
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="c5 c44"
                          >
                            <span
                              aria-hidden="true"
                              class="c48"
                            >
                              <svg
                                fill="none"
                                height="1rem"
                                viewBox="0 0 14 8"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c9 c49"
                    >
                      Expiration date: Unlimited
                    </span>
                  </div>
                </div>
                <div
                  class="c30"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c5 c22"
                      >
                        <label
                          class="c9 c31 c32"
                          for="20"
                        >
                          Token type
                          <span
                            class="c9 c33 c34"
                          >
                            *
                          </span>
                        </label>
                        <div
                          aria-autocomplete="none"
                          aria-controls="radix-10"
                          aria-describedby="20-hint 20-error"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-label="Token type"
                          aria-required="true"
                          class="c5 c50 c41 c42"
                          data-state="closed"
                          dir="ltr"
                          id="20"
                          overflow="hidden"
                          role="combobox"
                          tabindex="0"
                        >
                          <span
                            class="c5 c43 c44"
                          >
                            <span
                              class="c9 c51 c46"
                            >
                              <span
                                class="c47"
                              >
                                Read-only
                              </span>
                            </span>
                          </span>
                          <span
                            class="c5 c44"
                          >
                            <span
                              aria-hidden="true"
                              class="c48"
                            >
                              <svg
                                fill="none"
                                height="1rem"
                                viewBox="0 0 14 8"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c52 c53"
          >
            <div
              class="c54"
            >
              <div
                class="c55"
              >
                <div
                  class="c5 c56"
                >
                  <h2
                    class="c9 c28"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c9 c25"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c57"
                >
                  <div
                    aria-disabled="false"
                    class="c58 c59"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c5 c60 c6 c61"
                    >
                      <div
                        class="c5 c62 c44"
                      >
                        <button
                          aria-controls="accordion-content-23"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-23"
                          class="c5 c63 c11 c64 c65"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c9 c66"
                          >
                            <span
                              class="c9 c67"
                              id="accordion-label-23"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c5 c44"
                        >
                          <span
                            aria-hidden="true"
                            class="c5 c68 c69"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c70 c71"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c58 c72"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c5 c73 c6 c61"
                    >
                      <div
                        class="c5 c62 c44"
                      >
                        <button
                          aria-controls="accordion-content-24"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-24"
                          class="c5 c63 c11 c64 c65"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c9 c66"
                          >
                            <span
                              class="c9 c67"
                              id="accordion-label-24"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c5 c44"
                        >
                          <span
                            aria-hidden="true"
                            class="c5 c68 c69"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c70 c71"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c74"
            >
              <div
                class="c75"
                style="min-height: 100%;"
              >
                <div
                  class="c5 c56"
                >
                  <h3
                    class="c9 c28"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c9 c25"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c76"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
